@@ -256,6 +256,7 @@ Hans Eckardt
 Rodolpho Eckhardt
 Grant Edwards
 John Ehresman
+Tal Einat
 Eric Eisner
 Andrew Eland
 Julien Élie
